; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_charset.c_lookup_translation.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_charset.c_lookup_translation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.translation = type { i32, i32, %struct.translation* }

@all_translations = common dso_local global %struct.translation* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.translation* (i8*, i8*)* @lookup_translation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.translation* @lookup_translation(i8* %0, i8* %1) #0 {
  %3 = alloca %struct.translation*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.translation*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.translation*, %struct.translation** @all_translations, align 8
  store %struct.translation* %7, %struct.translation** %6, align 8
  br label %8

8:                                                ; preds = %28, %2
  %9 = load %struct.translation*, %struct.translation** %6, align 8
  %10 = icmp ne %struct.translation* %9, null
  br i1 %10, label %11, label %32

11:                                               ; preds = %8
  %12 = load i8*, i8** %4, align 8
  %13 = load %struct.translation*, %struct.translation** %6, align 8
  %14 = getelementptr inbounds %struct.translation, %struct.translation* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @strcmp(i8* %12, i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %27, label %18

18:                                               ; preds = %11
  %19 = load i8*, i8** %5, align 8
  %20 = load %struct.translation*, %struct.translation** %6, align 8
  %21 = getelementptr inbounds %struct.translation, %struct.translation* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @strcmp(i8* %19, i32 %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %27, label %25

25:                                               ; preds = %18
  %26 = load %struct.translation*, %struct.translation** %6, align 8
  store %struct.translation* %26, %struct.translation** %3, align 8
  br label %33

27:                                               ; preds = %18, %11
  br label %28

28:                                               ; preds = %27
  %29 = load %struct.translation*, %struct.translation** %6, align 8
  %30 = getelementptr inbounds %struct.translation, %struct.translation* %29, i32 0, i32 2
  %31 = load %struct.translation*, %struct.translation** %30, align 8
  store %struct.translation* %31, %struct.translation** %6, align 8
  br label %8

32:                                               ; preds = %8
  store %struct.translation* null, %struct.translation** %3, align 8
  br label %33

33:                                               ; preds = %32, %25
  %34 = load %struct.translation*, %struct.translation** %3, align 8
  ret %struct.translation* %34
}

declare dso_local i32 @strcmp(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
